chore: add backlog to installer

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,9 @@ __pycache__
 /supekku/docs
 
 /scratch
+
+# spec-driver workspace directories (in case installer is run in repo root during testing)
+/.spec-driver/
+/backlog/
+/change/
+/specify/
