--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,7 +98,6 @@ indent-width = 2
 target-version = "py312"
 
 [tool.ruff.lint]
-# select = ["E", "F", "W", "I", "N", "UP"]
 # select = ["ALL"]
 extend-select = [
       "F",    # Pyflakes
@@ -129,31 +128,8 @@ ignore = [
       "PLR2004",  # Magic values - I have my doubts but ...
       "D",        # All pydocstyle (handle separately if wanted)
       "PTH123",   # Allow open() - sometimes clearer
+      "COM812",   # formatter wants trailing comma rule suppressed
 ]
-# extend-select = [
-#     "F",        # Pyflakes rules
-#     "W",        # PyCodeStyle warnings
-#     "E",        # PyCodeStyle errors
-#     "I",        # Sort imports properly
-#     "UP",       # Warn if certain things can changed due to newer Python versions
-#     "C4",       # Catch incorrect use of comprehensions, dict, list, etc
-#     "FA",       # Enforce from __future__ import annotations
-#     "ISC",      # Good use of string concatenation
-#     "ICN",      # Use common import conventions
-#     "RET",      # Good return practices
-#     "SIM",      # Common simplification rules
-#     "TID",      # Some good import practices
-#     "TC",       # Enforce importing certain types in a TYPE_CHECKING block
-#     "PTH",      # Use pathlib instead of os.path
-#     "TD",       # Be diligent with TODO comments
-#     "A",        # detect shadowed builtins
-#     "BLE",      # disallow catch-all exceptions
-#     "COM",      # enforce trailing comma rules
-#     "DTZ",      # require strict timezone manipulation with datetime
-#     "FBT",      # detect boolean traps
-#     "N",        # enforce naming conventions, e.g. ClassName vs function_name
-# ]
-
 fixable = ["ALL"]
 unfixable = []
 # Allow unused variables when underscore-prefixed.
