--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ dev = [
 minversion = "6.0"
 addopts = "-ra"
 testpaths = [
+    "supekku/cli",
     "supekku/scripts",
     "supekku/scripts/lib",
 ]
