--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = [
+    "jinja2>=3.1.0",
     "pyyaml>=6.0.3",
     "python-frontmatter>=1.1.0",
     "typer>=0.15.0",
